--- a/src/Components/Diseños.css
+++ b/src/Components/Diseños.css
@@ -89,6 +89,15 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     transition: transform 0.3s ease-in-out;
+    display: flex;
+    flex-direction: column;
+    height: 100%
+}
+
+.card-body {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 .card:hover {
@@ -108,6 +117,7 @@ body {
     border: none;
     display: flex;
     justify-content: center;
+    margin-top: auto;
 }   
 
 .btn-primary:hover {
@@ -234,7 +244,7 @@ body {
     width: 100%;
 
     margin-bottom: 50px;
-    text-align: right; /* Colocar el cuadro de búsqueda a la derecha */
+    text-align: right; 
 }
 
 .comentarios-section {
@@ -264,9 +274,58 @@ body {
     margin-bottom: 10px;
 }
 
+.btn-navegacion {
+    background-color: #007bff;
+    color: var(--white-color); 
+    margin-right: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+  
+.btn-navegacion:hover {
+    background-color: #0056b3;
+    color: var(--quaternary-color);
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
 
+.search-box-right {
+    width: 100%;
 
-/* Estilos adicionales para pantallas más pequeñas */
+    margin-bottom: 50px;
+    text-align: right;
+}
+
+.search-box-right {
+    width: 100%;
+    margin-bottom: 20px;
+    text-align: right;
+}
+
+.search-box-right input {
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    margin-right: 10px;
+    width: 200px; 
+    font-size: 16px;
+}
+
+.search-box-right button {
+    background-color: #007bff;
+    border: none;
+    color: var(--white-color);
+    border-radius: 5px;
+    padding: 10px 15px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.search-box-right button:hover {
+    background-color: #0056b3;
+}
+
 @media (max-width: 10000px) {
     .carrusel-primeras-cinco {
         max-width: 80%; 
